fixed form align

--- a/src/FormBlocks/FormBlocks.scss
+++ b/src/FormBlocks/FormBlocks.scss
@@ -41,7 +41,6 @@ form {
 
     display: flex;
     justify-content: center;
-    align-items: center;
 
     width: 90vw;
     
